--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="main.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload = "draw();">
+<body>
     <canvas id="myCanvas" width="720px" height="360px"></canvas>
     
 </body>
